<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LicenseExpiry">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/manage_license_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_license_txt"
            android:textSize="23sp" />
        <Button
            android:id="@+id/newSub_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:onClick="newSubBtn"
            android:padding="10sp"
            android:layout_below="@+id/manage_license_txt"
            android:text="@string/newSub_btn" />

        <Button
            android:id="@+id/updateSub_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newSub_btn"
            android:layout_margin="5sp"
            android:onClick="updateSubBtn"
            android:padding="10sp"
            android:text="@string/updateSub_btn" />

        <Button
            android:id="@+id/deleteSub_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateSub_btn"
            android:layout_margin="5sp"
            android:onClick="deleteSubBtn"
            android:padding="10sp"
            android:text="@string/deleteSub_btn" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/manage_user_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_user_txt"
            android:textSize="23sp" />

        <Button
            android:id="@+id/newUser_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/manage_user_txt"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="5sp"
            android:padding="10sp"
            android:text="@string/newUser_btn" />

        <Button
            android:id="@+id/deleteUser_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newUser_btn"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="5sp"
            android:padding="10sp"
            android:text="@string/deleteUser_btn" />

        <Button
            android:id="@+id/listSub_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deleteUser_btn"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:onClick="listSubBtn"
            android:text="@string/listSub_btn" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>