<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/add_item_frag">

    <TextView
        android:id="@+id/add_item_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="50dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/add_item_txt"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/name_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_item_txt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/add_name_txt"
            android:inputType="text"
            android:autofillHints="Enter item name"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/amount_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/name_linear"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_amount_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_amount"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_amount"
            android:autofillHints="Enter item amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/add_amount_txt"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/desc_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/amount_linear">
        <TextView
            android:id="@+id/add_desc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_desc"
            android:textSize="20sp"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/add_desc"
            android:autofillHints="Enter item desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/add_desc_txt"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/location_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/desc_linear">
        <TextView
            android:id="@+id/add_location_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_loc"
            android:textSize="20sp"
            android:padding="10dp"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/add_location_txt">
            <RadioButton android:id="@+id/radio_evans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loc_evans"/>
            <RadioButton android:id="@+id/radio_rh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loc_rh"/>
        </RadioGroup>


    </RelativeLayout>

    <TextView
        android:id="@+id/action_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/cancel"
        android:textColor="#33bbff"
        android:textSize="20sp"
        android:layout_below="@+id/location_linear"/>

    <TextView
        android:id="@+id/action_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/location_linear"
        android:text="@string/ok"
        android:textColor="#33bbff"
        android:textSize="20sp" />


</RelativeLayout>