<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/update_license_frag">

    <TextView
        android:id="@+id/update_license_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:padding="50dp"
        android:text="@string/updateSub_btn"
        android:textAlignment="center"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/license_name_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_license_txt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/choose_license_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/choose_license_txt"/>

        <Spinner
            android:id="@+id/update_license_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/choose_license_txt"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:padding="20dp"
            android:textSize="15sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/license_date_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/license_name_linear">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/license_date_txt"
            android:text="@string/license_date_txt"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:padding="10dp"/>

        <DatePicker
            android:id="@+id/license_update_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/license_date_txt"
            android:layout_marginStart="15sp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:padding="10dp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/action_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="#33bbff"
        android:textSize="20sp"
        android:layout_below="@+id/license_date_linear"/>

    <TextView
        android:id="@+id/action_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:layout_below="@+id/license_date_linear"
        android:text="@string/ok"
        android:textColor="#33bbff"
        android:textSize="20sp" />


</RelativeLayout>